syntax = "proto3";

message UseRoomFurnitureData {
    string id = 1;

    optional uint32 animation = 2;
    optional string tag = 3;
}
